--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -1458,37 +1458,19 @@ Your last memory is the sound of crashing glass and lemons as the table collapse
 
 [[yes that&#39;s what I want]]</tw-passagedata><tw-passagedata pid="166" name="cast your line?" tags="slimy" position="1125,2000" size="100,100">{(set:$onionbait to false)(set:$toblerbait to false)
 
-(if:$hasOnion is true)[(link-replace:&quot;Bait the hook with onion&quot;)[You (if:$toblerbait is true)[also ]baited the hook with onion.
+(if:$hasOnion is true)[|baitonion&gt;[(link-replace:&quot;Bait the hook with onion&quot;)[You (if:$toblerbait is true)[also ]baited the hook with onion.
 
-(set:$onionbait to true)
+(set:$onionbait to true)(unless: $endingT and $endingO)[(replace:?baittoblerone)[]]
 
-]&lt;br&gt;&lt;br&gt;]
+]]&lt;br&gt;&lt;br&gt;]
 
-(if:$hasToblerone is true)[(link-replace:&quot;Bait the hook with toblerone&quot;)[You (if:$onionbait is true)[also ]baited the hook with toblerone.
+(if:$hasToblerone is true)[|baittoblerone&gt;[(link-replace:&quot;Bait the hook with toblerone&quot;)[You (if:$onionbait is true)[also ]baited the hook with toblerone.
 
-(set:$toblerbait to true)
+(set:$toblerbait to true)(unless: $endingT and $endingO)[(replace:?baitonion)[]]
 
-]&lt;br&gt;&lt;br&gt;]
+]]&lt;br&gt;&lt;br&gt;]
 
-}(link:&quot;Cast!&quot;)[
-
-(if:$onionbait is true)[(if:$toblerbait is true)[{
-
-}(go-to:&quot;ending3&quot;){
-
-}](else:)[{
-
-(go-to:&quot;ending2&quot;)
-
-}]](else-if:$toblerbait is true)[{
-
-}(go-to:&quot;ending1&quot;){
-
-}](else:)[{
-
-}(go-to:&quot;Cast!&quot;){
-
-}]]</tw-passagedata><tw-passagedata pid="167" name="cell" tags="emma" position="2800,1175" size="100,100">{(set:$turns to 0)
+}(link:&quot;Cast!&quot;)[(display:&quot;casting&quot;)]</tw-passagedata><tw-passagedata pid="167" name="cell" tags="emma" position="2800,1175" size="100,100">{(set:$turns to 0)
 
 }You arrive at Cool Dog&#39;s cell.
 
@@ -1619,7 +1601,7 @@ One from Cool Dog, who (in bow wows and woofs) explains that they&#39;ve been se
 
 [[Ignore Cool Dog&#39;s plea for help-&gt;start]]
 
-[[Vow to break Cool Dog out of prison.]]]][]&lt;messages|</tw-passagedata><tw-passagedata pid="175" name="ending1" tags="slimy" position="1000,2200" size="100,100">{(set:$endingT to true)
+[[Vow to break Cool Dog out of prison.]]]][]&lt;messages|</tw-passagedata><tw-passagedata pid="175" name="ending1" tags="slimy" position="1000,2200" size="100,100">{(set:$endingT to true)(set:$hasOnion to false)(set:$hasToblerone to false)
 
 }you catch a beautiful eel
 
@@ -1627,7 +1609,7 @@ and she has barely even touched your toblerone
 
 dinner is served
 
-[[... .... ....-&gt;you feel like]]</tw-passagedata><tw-passagedata pid="176" name="ending2" tags="slimy" position="1125,2200" size="100,100">{(set:$endingO to true)
+[[... .... ....-&gt;you feel like]]</tw-passagedata><tw-passagedata pid="176" name="ending2" tags="slimy" position="1125,2200" size="100,100">{(set:$endingO to true)(set:$hasOnion to false)(set:$hasToblerone to false)
 
 }mr. beast and all his frends are there. They&#39;ve taken pity on you and give you gifts.
 
@@ -2890,7 +2872,25 @@ Stashing the finished patch up your shirt, you direct the spirit mice to turn th
 
 it&#39;s been a wild kind of day! but you got your job done, and now it&#39;s time to drive you all home, perhaps you&#39;ll cook up a hearty pumpkin and two onions bone broth to warm you all up, and you can all have a good laugh about your fun day.
 
-[[THE END-&gt;start]]]]</tw-passagedata></tw-storydata>
+[[THE END-&gt;start]]]]</tw-passagedata><tw-passagedata pid="386" name="casting" tags="" position="1075,1875" size="100,100">(if:$onionbait is true)[
+
+	(if:$toblerbait is true)[
+
+		(go-to:&quot;ending3&quot;)
+
+	](else:)[
+
+		(go-to:&quot;ending2&quot;)
+
+]](else-if:$toblerbait is true)[
+
+	(go-to:&quot;ending1&quot;)
+
+](else:)[
+
+(go-to:&quot;Cast!&quot;)
+
+]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
