--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -323,10 +323,10 @@ tw-story[tags~="em-grey1"] tw-link:hover,tw-story[tags~="em-turngrey1"] tw-link:
   color:#6b403d;
 }
 
-tw-story[tags~="em-turnblack"] tw-link,tw-story[tags~="em-turnblack"] tw-link{
+tw-story[tags~="em-turnblack"] tw-link,tw-story[tags~="em-black"] tw-link{
  color:#b1362c;
 }
-tw-story[tags~="em-turnblack"] tw-link:hover,tw-story[tags~="em-turnblack"] tw-link:hover{
+tw-story[tags~="em-turnblack"] tw-link:hover,tw-story[tags~="em-black"] tw-link:hover{
   color:#7d261f;
 }
 
