removing po box

--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -3129,9 +3129,7 @@ altho mothers news is gone and i am sad, you can still support mothers news’ e
 (after:time+1s)[.
 (after:time+.5s)[.
 (after:time+.5s)[.
-(after:time+1s)[ps. Send a self addressed, stamped envelope to: COOL DOG, PO BOX 3481, PROVIDENCE, RI 02909 USA for free stickers. please share this info!
-
-(after:time+1s)[[[THE END-&gt;start]]]]]]]]]]]]]]]]]]]</tw-passagedata><tw-passagedata pid="395" name="exe" tags="exe" position="2275,4575" size="100,100">{(set:$headphones to false)
+(after:time+1s)[[[THE END-&gt;start]]]]]]]]]]]]]]]]]]</tw-passagedata><tw-passagedata pid="395" name="exe" tags="exe" position="2275,4575" size="100,100">{(set:$headphones to false)
 
 }Your bed lies partially made in the corner, inviting you to partake in slumber&#39;s sweet embrace, if only for a moment.
 
